# kuka_kvp_hw_interface

./: CMakeLists.txt  Readme.md  package.xml
config/: hardware_controllers.yaml  params.yaml
include/: BoostClientCross.h
include/kuka_kvp_hw_interface/: kuka_kvp_hw_interface.h  kuka_kvp_loop.h  kvp_ftc_interface.h  kvp_joint_command_interface.h  kvp_joint_command_loop.h  kvp_joint_state_interface.h  kvp_joint_state_loop.h  kvp_joint_trajectory_interface.h  kvp_sws_interface.h  kvp_variable_interface.h
krl/: kukavarproxy.src  kukavarproxyvelperc.src  toolchanger.src
launch/: test_hardware_interface.launch  test_joint_state_interface.launch  test_joint_trajectory_interface.launch  test_kvp_ftc_interface.launch  test_kvp_sws_interface.launch  test_kvp_variable_interface.launch
src/: kuka_kvp_hw_interface.cpp  kuka_kvp_loop.cpp  kuka_kvp_node.cpp  kvp_ftc_interface.cpp  kvp_ftc_node.cpp  kvp_joint_command_interface.cpp  kvp_joint_command_loop.cpp  kvp_joint_command_node.cpp  kvp_joint_state_interface.cpp  kvp_joint_state_loop.cpp  kvp_joint_state_node.cpp  kvp_joint_trajectory_interface.cpp  kvp_joint_trajectory_node.cpp  kvp_sws_interface.cpp  kvp_sws_node.cpp  kvp_variable_interface.cpp  kvp_variable_node.cpp
srv/: GetBool.srv  GetFloat.srv  SetBool.srv  SetFloat.srv  SetInt.srv  getBool.srv  getToolStatus.srv  lockTool.srv  unlockTool.srv
