<?xml version="1.0"?>
<package format="2">
  <name>kuka_kvp_hw_interface</name>
  <version>0.0.0</version>
  <description>KUKA KRC interface using KUKAVARPROXY</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ivareri@stud.ntnu.no">Ivar Eriksen</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/kuka_kvp_hw_interface</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author email="ivareri@stud.ntnu.no">Ivar Eriksen</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib</depend>
  <depend>boost</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>industrial_utils</depend>
  <depend>industrial_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
